# OpenCloning_docs

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: annotating_sequences.md  assembler.md  changelog.md  contributing.md  exporting.md  faqs.md  goldenbraid.md  importing_sequences.md  index.md  interface.md  primer_design.md  primers.md  robots.txt  running_your_own_instance.md  sequencing_data.md  settings.md  syntax_builder.md  templates.md
docs/javascript/: extra.js
docs/methods/: cre_loxp.md  crispr_hdr.md  gateway.md  gibson.md  golden_gate.md  homologous_recombination.md  in_fusion.md  in_vivo_assembly.md  oligonucleotide_hybridization.md  overlap_extension.md  pcr.md  phage_recombinases.md  polymerase_extension.md  restriction_ligation.md  reverse_complement.md  templateless_pcr.md
docs/stylesheets/: extra.css
overrides/: main.html
