[tool.poetry]
authors = ["Manuel Lera Ramirez <manulera14@gmail.com>"]
description = "OpenCloning documentation"
name = "OpenCloning_docs"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.5"
requests = "^2.31.0"
mkdocs-macros-plugin = "^1.0.4"
mkdocs-include-markdown-plugin = "^7.1.6"
mkdocs-video = "^1.5.0"
mkdocs-git-revision-date-localized-plugin = "^1.5.0"
